<resources>
    <string name="app_name">GitHub Browser</string>

    <!-- Login screen string values-->
    <string name="login_screen_login_hint">Login name</string>
    <string name="login_screen_password_hint">Password or personal access token</string>
    <string name="login_screen_login_button_name">Login</string>
    <string name="login_screen_error_message_text">Wrong username or password.\nPlease check your credentials.</string>
    <string name="login_screen_error_msg_network_issue">Cannot connect.\nPlease check your network connection</string>

    <!-- User screen view string values -->
    <string name="followers_button_text">Followers: %1$s</string>
    <string name="following_button_text">Following: %1$s</string>

    <string name="repositories_title">Repositories</string>
    <string name="user_owned_repos_button_title">Owned</string>
    <string name="user_starred_repos_button_title">Starred</string>

    <!-- Repo screen view string values-->
    <string name="repos_commits">Commits: </string>
    <string name="repos_branches">Branches: </string>
    <string name="repos_releases">Releases: </string>
    <string name="repos_contributos">Contributors: </string>
    <string name="repos_star">Star: </string>
    <string name="repos_forks">Forks: </string>

    <!--Search screen view string values-->
    <string name="search_title">search</string>

    <!-- Menu string values-->
    <string name="menu_action_logout_title">Logout</string>
    <string name="menu_action_search_title">Search</string>
    <string name="menu_action_star_title">Star</string>
    <string name="menu_action_home_title">Home</string>

    <!-- Error string resources -->
    <string name="no_data_available_with_network">Resource was not found. Check if you have Internet connection.</string>
</resources>
