<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:auth_id="@+auth_id/menu_action_search_search_screen"
        android:title="@string/menu_action_search_title"
        app:showAsAction="ifRoom"
        android:icon="@drawable/search_white_24"
        android:orderInCategory="10"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:auth_id="@+auth_id/menu_action_home_search_screen"
        android:title="@string/menu_action_home_title"
        app:showAsAction="never"
        android:orderInCategory="80"/>

    <item
        android:auth_id="@+auth_id/menu_action_logout_search_screen"
        android:title="@string/menu_action_logout_title"
        app:showAsAction="never"
        android:orderInCategory="100"/>
</menu>